--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -4,3 +4,4 @@ project(code)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(code judge_prime_number.cpp)
+add_executable(code1 Extended_Euclidean_algorithm.cpp)
