add Eucildean_algorithm and update the example of the extented eucildean algorithm

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -3,5 +3,6 @@ project(code)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(code judge_prime_number.cpp)
+add_executable(code judge_prime_number.cpp Euclidean_algorithm.cpp)
 add_executable(code1 Extended_Euclidean_algorithm.cpp)
+add_executable(code2 Euclidean_algorithm.cpp)
