--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(code judge_prime_number.cpp Euclidean_algorithm.cpp)
 add_executable(code1 Extended_Euclidean_algorithm.cpp)
 add_executable(code2 Euclidean_algorithm.cpp)
+add_executable(code3 high_power_modular_operations.cpp)
